Some renaming and cleanup